--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@heroicons/react": "^2.0.16",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0"
   }
 }
