--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [tool.poetry]
-name = "django-react-tailwindcss"
-version = "0.2.0"
+name = "myday3"
+version = "0.0.0"
 description = ""
-authors = ["João Vítor Carli <jvitor.carli@tutamail.com>"]
+authors = ["Bhavik Soni"]
 license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.6"
 Django = "^3.2"
 python-dotenv = "^0.17.0"
+email-validator = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 
